@@ -4,6 +4,7 @@ examples/perl-test-manage-helper.pl
 examples/perl-test-manage.vim
 inc/Test/Run/Builder.pm
 lib/Test/Count/Base.pm
+lib/Test/Count/Filter/ByFileType/App.pm
 lib/Test/Count/Filter.pm
 lib/Test/Count/Parser.pm
 lib/Test/Count.pm
